Be robust when faced with NULL arrays

Some API return NULL to mean an empty array (especially if they
have an explicit length). Be robust in this cases, and handle such
empty bytearrays in a way that prevents crashes.

https://bugzilla.gnome.org/show_bug.cgi?id=667069